# space-pirates

./: CMakeLists.txt  README.md
development/: Backlog.md  Promptology.md
src/: Collision.h  CollisionBox.cpp  CollisionBox.h  CollisionType.cpp  CollisionType.h  EventSystem.cpp  EventSystem.h  GameObject.cpp  GameObject.h  GlobalEventHandler.cpp  GlobalEventHandler.h  GlobalSettings.cpp  GlobalSettings.h  LaserBeam.cpp  LaserBeam.h  MovementUtility.cpp  MovementUtility.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Rock.cpp  Rock.h  TextBox.cpp  TextBox.h  TextureData.cpp  TextureData.h  TextureManager.cpp  TextureManager.h  Update.h  VisibilityDelegate.h  Window.cpp  Window.h  WorldMap.cpp  WorldMap.h  main-old.cpp  main.cpp  main.cpp-crap.txt
